--- a/static/css/booking.css
+++ b/static/css/booking.css
@@ -250,13 +250,13 @@ color:#999999;
 /* ----------------------------- */
 
 #form-search-item {
-  background: #F1EFE2; /*url('../img/form-search-item-background.png');*/
-  border: 1px solid gray;
+  /*background: #F1EFE2;*/ /*url('../img/form-search-item-background.png');*/
+  /*border: 1px solid gray;*/
   padding: 10px 10px 5px 10px;
   /* Esquinas redondeadas */
-  -webkit-border-radius: 5px 5px; /* Safari  */ 
-  -moz-border-radius: 5px 5px; /* Firefox */
-  border-radius: 5px 5px; /* iExplorer 9 */
+  /*-webkit-border-radius: 5px 5px;*/ /* Safari  */ 
+  /*-moz-border-radius: 5px 5px;*/ /* Firefox */
+  /*border-radius: 5px 5px;*/ /* iExplorer 9 */
 }
 
 #form-search-item div { /* Each components lines is displayed in a div */ 
@@ -303,28 +303,27 @@ color:#999999;
 
 #content-reserva div.car{	
   margin-top: 5px; /* Margin between cars */
-  height: 85px;  
+  min-height: 125px;  
   position: relative;
   /* Esquinas redondeadas */
   -webkit-border-radius: 10px; /* Safari  */ 
   -moz-border-radius: 10px; /* Firefox */
   border-radius: 10px; /* iExplorer 9 */ 
   clear: left;
-  padding-bottom: 5px;
 } 
 
 #content-reserva div.car_photo {
  float: left;
  margin-left: 5px;	
  width: 100px;
- padding: 10px;
+ padding: 25px 5px;
 }
 
 #content-reserva div.car_detail {
  float: left;	
  margin-left: 5px;
- padding: 5px;
- width: 400px;
+ padding: 25px 5px;
+ width: 450px;
 }
 
 #content-reserva div.car_detail_description {
@@ -337,50 +336,73 @@ color:#999999;
 
 
 #content-reserva div.car_price {
- margin-right: 10px;	
- float: right;
+ float: left;
 }
 
+#content-reserva div.car_price_not_optional {
+ float: right;
+ margin-right: 30px;
+ padding-top: 15px;
+}
+
+
 #content-reserva div.car_price_total {
- overflow: hidden;	
+ /*overflow: hidden;*/	
+ text-align: center;
 }
 
 #content-reserva div.car_price_booking {
-	
+  margin: 0 auto;
+  width: 75px;		
 }
 
 #content-reserva div.A{
-  background-color: #e1dfdf;
+  background-color: rgb(250,250,250);
 }
 
 #content-reserva div.B{
-  background-color: #f0efef;
+  background-color: rgb(245,245,245);
 }
 
 #content-reserva div.C{
-  background-color: #e1dfdf;
+  background-color: rgb(250,250,250);
 }
 
 #content-reserva div.D{
-  background-color: #f0efef;
+  background-color: rgb(245,245,245);
 }
 
 #content-reserva div.E{
-  background-color: #e1dfdf;
+  background-color: rgb(250,250,250);
 }
 
 #content-reserva div.F{
-  background-color: #f0efef;	
+  background-color: rgb(245,245,245);	
+}
+
+#content-reserva div.G{
+  background-color: rgb(250,250,250); 
 }
 
 #content-reserva .car_price span{	
   font-size: 36px;
   text-align: right;
-  float:right;
+  /*float:right;*/
+}
+.car_price_optional {
+  margin-left: 30px;
+  float: left;
+  width: 125px;
 }
 
+.car_price_optional_text {
+  font-size: 12px;
+  font-style: italic;
+  text-align: center;
+  padding: 10px 0px 0px;
+}
 #content-reserva .book-button {
-  float: right;
+  /*float: right;*/
   min-width: 75px;
   min-height: 23px;
 }
@@ -402,29 +424,32 @@ color:#999999;
 #reservation-input {
  width: 50%; /*500px;*/
  float: left;	
- background: #F1EFE2; /*url('../img/form-search-item-background.png');*/
+ /*background: #F1EFE2;*/ /*url('../img/form-search-item-background.png');*/
  
  /* Esquinas redondeadas */
- -webkit-border-radius: 5px; /* Safari  */ 
- -moz-border-radius: 5px; /* Firefox */
- border-radius: 5px; /* iExplorer 9 */ 
+ /*-webkit-border-radius: 5px;*/ /* Safari  */ 
+ /*-moz-border-radius: 5px;*/ /* Firefox */
+ /*border-radius: 5px;*/ /* iExplorer 9 */ 
 
  padding-top: 10px;
  padding-bottom: 10px;
- padding-left: 5px;
+ /*padding-left: 5px;*/
 
   overflow: hidden;
-  border: 1px solid gray;
+ /*border: 1px solid gray;*/
 }
 
 #reservation-summary {
  width: 48%; /*240px;*/
  float: left;
  margin-left: 5px;
- background: #F1EFE2; /*url('../img/form-search-item-background.png');*/
+ padding-left: 10px;
+ padding-top: 0.808em;
+ /*background: #F1EFE2; */ /*url('../img/form-search-item-background.png');*/
+ background: #EEE;
 
-  overflow: hidden;
-  border: 1px solid gray;
+ overflow: hidden;
+ /*border: 1px solid gray;*/
   
   /* Esquinas redondeadas */
   -webkit-border-radius: 5px; /* Safari  */ 
@@ -473,6 +498,10 @@ color:#999999;
  padding: 5px;	
 }
 
+#tblextras thead {
+  border-bottom: 1px solid #CCC;
+}
+
 #tblextras td {
   padding-top: 5px;
   padding-bottom: 5px;
@@ -484,7 +513,7 @@ color:#999999;
 
 #content-reserva .form-reservation-extra-titulo {
  font-weight : bold;
- border-bottom:1px solid gray;
+ border-bottom:1px solid #CCC;
 }
 
 #content-reserva .form-reservation-extra-columna1 {
@@ -507,16 +536,6 @@ color:#999999;
  background-color: transparent;
 }
 
-.fs_summary_total {
- background: black;
- margin: 5px;
- padding: 5px;
- /* Esquinas redondeadas */
- -webkit-border-radius: 5px; /* Safari  */ 
- -moz-border-radius: 5px; /* Firefox */
- border-radius: 5px; /* iExplorer 9 */ 
-}
-
 #fs_summary_collection {
  height: 10%;	
  clear: right;
@@ -528,6 +547,11 @@ color:#999999;
 
 #fs_summary_item {
  height: 20%;	
+}
+
+.item_chooser {
+  display: block;
+  margin: 0 auto;
 }
 
 #fs_summary_item #item_image {
