--- a/views/reserva-denegada.erb
+++ b/views/reserva-denegada.erb
@@ -1,4 +1,4 @@
     <h2>Reserva</h2>
     <p>El pago de la reserva ha sido denegado.</p>
-    <%= partial(:reserva, :locals => {:booking => booking})
+    <%= partial(:reserva, :locals => {:booking => booking}) %>
     <p>Puede intentar a realizar el pago con otra tarjeta, pulsando <a href="/reserva/charge-deposit">aquí</a></p>
