--- a/views/reserva-finalizada.erb
+++ b/views/reserva-finalizada.erb
@@ -1,12 +1,15 @@
-	  <h2>Reserva recibida</h2>
-	  <div class="letter">
-	  <p class="letter-recipient">Estimado Sr/Sra. <%= booking.customer_name %> <%= booking.customer_surname %>: </p>
-	  <p class="letter-paragraph">El identificador de su reserva es <strong><%= booking.id %></strong>. 
-	  	 En breve recibirá en su correo electrónico, <em> <%= booking.customer_email %> </em>,
-	  	 la confirmación de su reserva.</p>
-	  <p class="letter-complimentary-close">Atentamente, </p>
-	  <p class="letter-signature">El equipo de <%=company%></p>
-      </div>
-      <div id="highlight_block">
-        <%= partial(:reserva, :locals => {:booking => booking}) %>
-      </div>
+ <div class="container_12">
+   <div class="grid_8">
+     <div class="highlight_block top-margin">
+       <%= partial(:reserva, :locals => {:booking => booking}) %>  
+     </div>
+   </div>
+   <div class="grid_4 top-margin">
+     <%= partial(:booking_price, :locals => {:booking => booking}) %>  
+   </div>
+ </div>
+ <div class="container_12">
+   <div class="grid_12">
+      <%= partial(:booking_deposit, :locals => {:booking => booking}) %>
+   </div>
+ </div>
