--- a/views/reserva.erb
+++ b/views/reserva.erb
@@ -1,17 +1,17 @@
  <div class="container_12">
    <div class="grid_8">
    	 <div class="highlight_block top-margin">
-   	   <h2><%=t.booking.title("#{t[:booking][:state][booking.status.to_sym]}".downcase)%></h2>	
-   	   <p><%=t.booking.no_deposit%></p>
-       <%= partial(:booking_summary, :locals => {:booking => booking}) %>  
+       <%= partial(:reserva, :locals => {:booking => booking}) %>  
      </div>
    </div>
    <div class="grid_4 top-margin">
      <%= partial(:booking_price, :locals => {:booking => booking}) %>  
    </div>
  </div>
+ <% if booking.total_pending > 0 %>
  <div class="container_12">
    <div class="grid_12">
-   	  <%= partial(:booking_deposit, :locals => {:booking => booking}) %>
+   	  <%= partial(:booking_payment, :locals => {:booking => booking, :booking_deposit => booking_deposit, :booking_payment => booking_payment}) %>
    </div>
  </div>
+ <% end %>
