--- a/views/bookings_management.erb
+++ b/views/bookings_management.erb
@@ -18,11 +18,11 @@
          <th class="table-header-title" scope="col" style="width:10%"><%= t.booking_management.table.id %></th>
          <th class="table-header-title centered_text" scope="col" style="width:15%"><%= t.booking_management.table.creation_date %></th>
          <th class="table-header-title centered_text" scope="col" style="width:25%"><%= t.booking_management.table.customer %></th>
-         <th class="table-header-title centered_text" scope="col" style="width:5%"><%= t.booking_management.table.status %></th>
+         <th class="table-header-title centered_text" scope="col" style="width:10%"><%= t.booking_management.table.status %></th>
          <th class="table-header-title centered_text" scope="col" style="width:5%"><%= t.booking_management.table.payment_status %></th>         
          <th class="table-header-title centered_text" scope="col" style="width:15%"><%= t.booking_management.table.date_from %></th>
          <th class="table-header-title centered_text" scope="col" style="width:15%"><%= t.booking_management.table.date_to %></th>
-         <th class="table-header-title centered_text" scope="col" style="width:10%"><%= t.booking_management.table.notifications %></th>
+         <th class="table-header-title centered_text" scope="col" style="width:5%"><%= t.booking_management.table.notifications %></th>
        </tr>
      </thead>
      <tbody id="elements_tbody" class="table-tbody">             
@@ -50,8 +50,8 @@
       <td class="table-cell centered_text"><%%= self.formatDate(entity.date_to,'dd.MM.yyyy') %> </td>
       <td class="table-cell centered_text">
          <%% if (entity.customer_req_notification_sent) { %><span class="element-status pending-status smaller_text">c1</span> <%% } %>
-         <%% if (entity.customer_notification_sent) { %><span class="element-status done-status smaller_text">c2</span> <%%}%>
-         <%% if (entity.manager_notification_sent) { %><span class="element-status done-status smaller_text">m</span><%%}%>
+         <%% if (entity.customer_notification_sent) { %><span class="element-status confirmed-status smaller_text">c2</span> <%%}%>
+         <%% if (entity.manager_notification_sent) { %><span class="element-status confirmed-status smaller_text">m</span><%%}%>
       </td> 
     </tr>
 </script>
@@ -88,6 +88,42 @@
                 <span class="<%%=self.model.entityHooks[0].statusClass(entity)%> smaller_text element-status">
                   <%%= self.model.entityHooks[0].statusDescription[entity.status] %>
                 </span>
+                <span class="left-margin">
+              <%% if (entity.status == 'pending_confirmation') { %>
+                <button class="form-button green-button element-action-button" id="confirm_booking_button" 
+                      title="<%=t.booking_management.form.confirm_button.label%>" 
+                      data-action-method="POST"
+                      data-action-url="/booking/confirm/<%%=entity.id%>"
+                      data-confirm-message="<%=t.booking_management.form.confirm_button.message%>">
+                  <%=t.booking_management.form.confirm_button.label%>
+                </button>
+                <button class="form-button red-button element-action-button" id="cancel_booking_button" 
+                      title="<%=t.booking_management.form.cancel_button.label%>" 
+                      data-action-method="POST"
+                      data-action-url="/booking/cancel/<%%=entity.id%>"
+                      data-confirm-message="<%=t.booking_management.form.cancel_button.message%>">
+                  <%=t.booking_management.form.cancel_button.label%>
+                </button>                            
+              <%% } %>
+              <%% if (entity.status == 'confirmed') {  %>
+                <button class="form-button blue-button element-action-button" id="pickup_booking_button" 
+                      title="<%=t.booking_management.form.pickup_button.label%>" 
+                      data-action-method="POST"
+                      data-action-url="/booking/pickup/<%%=entity.id%>"
+                      data-confirm-message="<%=t.booking_management.form.pickup_button.message%>">
+                  <%=t.booking_management.form.pickup_button.label%>
+                </button>
+              <%%  } %>
+              <%% if (entity.status == 'in_progress') { %>
+                <button class="form-button black-button element-action-button" id="return_booking_button" 
+                      title="<%=t.booking_management.form.return_button.label%>" 
+                      data-action-method="POST"
+                      data-action-url="/booking/return/<%%=entity.id%>"
+                      data-confirm-message="<%=t.booking_management.form.return_button.message%>">
+                  <%=t.booking_management.form.return_button.label%>
+                </button>
+              <%% }%>
+                </span>
               </span>
             </div>
           </div>
@@ -100,7 +136,13 @@
                 </span>
               </span>
             </div>
-          </div>                      
+          </div>       
+          <%% if (entity.source) { %>
+            <div class="entity-field">
+              <span class="entity-fieldlabel"><%= t.booking_management.form.source %></span>
+              <span class="entity-fieldvalue"><%%= entity.source %></span>
+            </div>
+          <%% } %>               
         </div>
         <h3><%=t.booking_management.form.booking_data_title%></h3>        
         <div class="element_template">
@@ -398,10 +440,10 @@
           className = 'pending-status';
           break;
         case 'confirmed':
-          className = 'done-status';
+          className = 'confirmed-status';
           break;
         case 'in_progress':
-          className = 'done-status';
+          className = 'doing-status';
           break;
         case 'done':
           className = 'done-status';
