--- a/views/reserva-finalizada.erb
+++ b/views/reserva-finalizada.erb
@@ -10,6 +10,6 @@
  </div>
  <div class="container_12">
    <div class="grid_12">
-      <%= partial(:booking_deposit, :locals => {:booking => booking}) %>
+      <%= partial(:booking_deposit, :locals => {:booking => booking, :booking_deposit => booking_deposit}) %>
    </div>
  </div>
