--- a/views/reserva-online.erb
+++ b/views/reserva-online.erb
@@ -843,7 +843,7 @@
        	 var dias_diferencia = (date_to - date_from) / (1000*60*60*24);
        	 var horas_diferencia = (_date_to - _date_from) / (1000*60*60);
        	 
-       	 this.booking.days = Math.max(dias_diferencia,0);
+       	 this.booking.days = Math.max(Math.floor(dias_diferencia),0);
        	 this.booking.date_to_price_calculation = new Date(this.booking.date_to.getTime());
        	 
        	 if (this.exceeded_hours > 0 && (horas_diferencia/24 > dias_diferencia + this.exceeded_hours/24) ) {
